name:                nmp
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/rck1138/nmp#readme
license:             BSD3
license-file:        LICENSE
author:              Rory C. Kelly
maintainer:          rory@ucar.edu
copyright:           2017 Rory C. Kelly
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , cmdargs >= 0.10.10
                     , process >= 1.4.3.0
                     , pcre-heavy >= 1.0.0.2
                     , bytestring >= 0.10.8.1
                     , base-compat >= 0.9.3
                     , unix >= 2.7.2.1
  default-language:    Haskell2010

executable nmp
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , nmp
  default-language:    Haskell2010

test-suite nmp-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , nmp
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/rck1138/nmp
